force-app/main/default/objects/Factura__c/fields/Anulaci_n__c.field-meta.xml
<CustomField>
    <fullName>Anulaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anulación</label>
    <type>Checkbox</type>
</CustomField>