force-app/main/default/objects/Factura__c/fields/Base_imp_IVA_0__c.field-meta.xml
<CustomField>
    <fullName>Base_imp_IVA_0__c</fullName>
    <label>Base imp. IVA 0%</label>
    <summarizedField>L_neas_de_factura__c.Importe_sin_impuestos__c</summarizedField>
    <summaryFilterItems>
        <field>L_neas_de_factura__c.Tipo_de_impuesto__c</field>
        <operation>equals</operation>
        <value>0% Tasa Cero, 0% Tasa Cero, Exenta, No aplicar</value>
    </summaryFilterItems>
    <summaryForeignKey>L_neas_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>