force-app/main/default/objects/Factura__c/fields/Base_imposable__c.field-meta.xml
<CustomField>
    <fullName>Base_imposable__c</fullName>
    <label>Base imposable</label>
    <summarizedField>L_neas_de_factura__c.Importe_sin_impuestos__c</summarizedField>
    <summaryForeignKey>L_neas_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>