force-app/main/default/objects/Factura__c/fields/CC_IBAN__c.field-meta.xml
<CustomField>
    <fullName>CC_IBAN__c</fullName>
    <formula>IF( ISBLANK(Cliente__r.Cuenta_corriente__c), &quot;&quot;,&quot;CC: &quot;+Cliente__r.Cuenta_corriente__c) 
&amp;
IF( ISBLANK(Cliente__r.IBAN__c), &quot;&quot;,&quot;IBAN: &quot;+Cliente__r.IBAN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC/IBAN</label>
    <type>Text</type>
</CustomField>