force-app/main/default/objects/Factura__c/fields/Cobrada__c.field-meta.xml
<CustomField>
    <fullName>Cobrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobrada</label>
    <type>Checkbox</type>
</CustomField>