force-app/main/default/objects/Factura__c/fields/Contabilizada__c.field-meta.xml
<CustomField>
    <fullName>Contabilizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>La factura ha sido introducida en el programa de contabilidad.</description>
    <label>Contabilizada</label>
    <type>Checkbox</type>
</CustomField>