force-app/main/default/objects/Factura__c/fields/Cuota_Socio__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Socio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deducible por ser cuota socio.</description>
    <label>Cuota Socio</label>
    <type>Checkbox</type>
</CustomField>