force-app/main/default/objects/Factura__c/fields/Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n__c</fullName>
    <formula>Cliente__r.Direcci_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>