force-app/main/default/objects/Factura__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <formula>IF(
NOT(ISBLANK(Cliente__r.N_mero_de_CIF__c )), &quot;CIF&quot; + &quot;:  &quot; + Cliente__r.N_mero_de_CIF__c,




IF(ISPICKVAL (   Cliente__r.Tipo_de_documento__c   , &quot;NIF&quot; ),  &quot;NIF&quot; + &quot;: &quot; + Cliente__r.Documento_Dni__c,
IF(ISPICKVAL (   Cliente__r.Tipo_de_documento__c , &quot;NIE&quot; ),  &quot;NIE&quot; + &quot;: &quot; +  Cliente__r.Documento_Dni__c,
IF(ISPICKVAL (  Cliente__r.Tipo_de_documento__c  , &quot;DNI Europeo&quot; ),  &quot;DNI Europeo&quot; + &quot;: &quot; + Cliente__r.Documento_Dni__c,
IF(ISPICKVAL (  Cliente__r.Tipo_de_documento__c  , &quot;Niños sin DNI&quot; ),&quot;Niños sin DNI&quot;  + &quot;  &quot; + &quot;&quot;,
IF(ISPICKVAL (  Cliente__r.Tipo_de_documento__c  , &quot;Pasaporte&quot; ), &quot;Pasaporte&quot; + &quot;: &quot; + Cliente__r.Documento_Dni__c, &quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento</label>
    <type>Text</type>
</CustomField>