force-app/main/default/objects/Factura__c/fields/Donaci_n__c.field-meta.xml
<CustomField>
    <fullName>Donaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donación</label>
    <type>Checkbox</type>
</CustomField>