force-app/main/default/objects/Factura__c/fields/Factura_electr_nica__c.field-meta.xml
<CustomField>
    <fullName>Factura_electr_nica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factura electrónica</label>
    <type>Checkbox</type>
</CustomField>