force-app/main/default/objects/Factura__c/fields/Fecha_emisi_n_factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_emisi_n_factura__c</fullName>
    <label>Fecha emisión factura</label>
    <type>Date</type>
</CustomField>