force-app/main/default/objects/Factura__c/fields/Fin_periodo_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fin_periodo_facturaci_n__c</fullName>
    <label>Fin periodo facturación</label>
    <type>Date</type>
</CustomField>