force-app/main/default/objects/Factura__c/fields/Id_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Id_de_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>