force-app/main/default/objects/Factura__c/fields/Id_Factura_seq__c.field-meta.xml
<CustomField>
    <fullName>Id_Factura_seq__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id_Factura_seq</label>
    <referenceTo>Factura_rectificativa_seq__c</referenceTo>
    <relationshipLabel>Facturas_seq_id</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>