force-app/main/default/objects/Factura__c/fields/id_master_rect__c.field-meta.xml
<CustomField>
    <fullName>id_master_rect__c</fullName>
    <label>id master rect</label>
    <length>18</length>
    <type>Text</type>
</CustomField>