force-app/main/default/objects/Factura__c/fields/Impagada__c.field-meta.xml
<CustomField>
    <fullName>Impagada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impagada</label>
    <type>Checkbox</type>
</CustomField>