force-app/main/default/objects/Factura__c/fields/Importe_total_factura__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_factura__c</fullName>
    <label>Importe total factura</label>
    <summarizedField>L_neas_de_factura__c.Importe__c</summarizedField>
    <summaryForeignKey>L_neas_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>