force-app/main/default/objects/Factura__c/fields/Inicio_periodo_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Inicio_periodo_facturaci_n__c</fullName>
    <label>Inicio periodo facturación</label>
    <type>Date</type>
</CustomField>