force-app/main/default/objects/Factura__c/fields/IVA_10__c.field-meta.xml
<CustomField>
    <fullName>IVA_10__c</fullName>
    <label>IVA 10%</label>
    <summarizedField>L_neas_de_factura__c.Impuestos__c</summarizedField>
    <summaryFilterItems>
        <field>L_neas_de_factura__c.Tipo_de_impuesto__c</field>
        <operation>contains</operation>
        <value>10% Tasa baja</value>
    </summaryFilterItems>
    <summaryForeignKey>L_neas_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>