force-app/main/default/objects/Factura__c/fields/IVA_10_YES__c.field-meta.xml
<CustomField>
    <fullName>IVA_10_YES__c</fullName>
    <formula>IF( Base_imp_IVA_10__c =0.00, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA 10 YES</label>
    <type>Checkbox</type>
</CustomField>