force-app/main/default/objects/Factura__c/fields/IVA_21_YES__c.field-meta.xml
<CustomField>
    <fullName>IVA_21_YES__c</fullName>
    <formula>IF(Base_imp_IVA_21__c =0.00, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA 21 YES</label>
    <type>Checkbox</type>
</CustomField>