force-app/main/default/objects/Factura__c/fields/LabelFormaPago__c.field-meta.xml
<CustomField>
    <fullName>LabelFormaPago__c</fullName>
    <formula>CASE( Tipo_de_pago__c , &#39;Domiciliación bancaria&#39;, &#39;Domiciliació bancària&#39;, &#39;Efectivo&#39;, &#39;Efectiu&#39;,&#39;Tarjeta&#39;,&#39;Targeta&#39;, &#39;Transferencia&#39;, &#39;Transferència&#39;, &#39;Web&#39;, &#39;Web&#39;,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LabelFormaPago</label>
    <type>Text</type>
</CustomField>