force-app/main/default/objects/Factura__c/fields/N_mero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_factura__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Número de factura</label>
    <type>AutoNumber</type>
</CustomField>