force-app/main/default/objects/Factura__c/fields/N_mero_de_factura_rectificativaCALC__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_factura_rectificativaCALC__c</fullName>
    <formula>Id_Factura_seq__r.Name</formula>
    <label>Número de factura rectificativaCALC</label>
    <type>Text</type>
</CustomField>