force-app/main/default/objects/Factura__c/fields/Nombre_del_titular__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_titular__c</fullName>
    <formula>IF ( Cliente__r.Tipo_cuenta__c = &#39;Cuenta personal&#39;, BLANKVALUE(Cliente__r.Titular_de_la_cuenta__c, (Cliente__r.FirstName + &#39; &#39; + Cliente__r.LastName)),  Cliente__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del titular</label>
    <type>Text</type>
</CustomField>