force-app/main/default/objects/Factura__c/fields/Nombre_exposici_n__c.field-meta.xml
<CustomField>
    <fullName>Nombre_exposici_n__c</fullName>
    <label>Nombre exposición</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>