force-app/main/default/objects/Factura__c/fields/Nombre_fotograf_a__c.field-meta.xml
<CustomField>
    <fullName>Nombre_fotograf_a__c</fullName>
    <label>Nombre fotografía</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>