force-app/main/default/objects/Factura__c/fields/obs__c.field-meta.xml
<CustomField>
    <fullName>obs__c</fullName>
    <label>Observaciones</label>
    <length>250</length>
    <type>Text</type>
</CustomField>