force-app/main/default/objects/Factura__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <description>Campo para uso oficial</description>
    <formula>IF(Anulaci_n__c = true, N_mero_de_factura_rectificativaCALC__c,N_mero_de_factura__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia</label>
    <type>Text</type>
</CustomField>