force-app/main/default/objects/Factura__c/fields/Remesa__c.field-meta.xml
<CustomField>
    <fullName>Remesa__c</fullName>
    <label>Remesa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>