force-app/main/default/objects/Factura__c/fields/Remesada__c.field-meta.xml
<CustomField>
    <fullName>Remesada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remesada</label>
    <type>Checkbox</type>
</CustomField>