force-app/main/default/objects/Factura__c/fields/Tiene_rectificativa__c.field-meta.xml
<CustomField>
    <fullName>Tiene_rectificativa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene rectificativa</label>
    <type>Checkbox</type>
</CustomField>