force-app/main/default/objects/Factura__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A (anulaciones)</fullName>
            </value>
            <value>
                <fullName>M (productos)</fullName>
            </value>
            <value>
                <fullName>SO (socios)</fullName>
            </value>
            <value>
                <fullName>SU (subscriptores)</fullName>
            </value>
            <value>
                <fullName>T (salidas)</fullName>
            </value>
            <value>
                <fullName>WE (compra web)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>