force-app/main/default/objects/Factura__c/fields/Tipo_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Factura__c</fullName>
    <label>Tipo de Factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitiva</fullName>
            </value>
            <value>
                <fullName>Rectificativa</fullName>
            </value>
            <value>
                <fullName>Proforma</fullName>
                <isActive>false</isActive>
                <label>Proforma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>