force-app/main/default/objects/Factura__c/fields/Tipolog_a__c.field-meta.xml
<CustomField>
    <fullName>Tipolog_a__c</fullName>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Archivo fotográfico</fullName>
            </value>
            <value>
                <fullName>Escuelas</fullName>
            </value>
            <value>
                <fullName>Profesionales</fullName>
            </value>
            <value>
                <fullName>Viajes</fullName>
            </value>
            <value>
                <fullName>Voluntarios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>