force-app/main/default/objects/Factura__c/fields/Total_IVA_10__c.field-meta.xml
<CustomField>
    <fullName>Total_IVA_10__c</fullName>
    <formula>Base_imp_IVA_10__c + IVA_10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total IVA 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>