force-app/main/default/objects/Factura__c/fields/Total_IVA_4__c.field-meta.xml
<CustomField>
    <fullName>Total_IVA_4__c</fullName>
    <formula>IVA_4__c + Base_imp_IVA_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total IVA 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>